<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/draw"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/activity_main2" />

        <RelativeLayout
            android:id="@+id/draw_left_layout"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:background="@color/white">

            <RelativeLayout
                android:id="@+id/context_img"
                android:layout_width="300dp"
                android:layout_height="180dp">

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="180dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/mat2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:text="@string/app_name2"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/context_img"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/support"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:scaleType="fitXY"
                        android:src="@mipmap/ic_support" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:text="@string/support"
                        android:textColor="#333333"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/update_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:scaleType="fitXY"
                        android:src="@mipmap/ic_update_app" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:text="@string/app_update"
                        android:textColor="#333333"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/about_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:scaleType="fitXY"
                        android:src="@mipmap/ic_about" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:text="@string/about"
                        android:textColor="#333333"
                        android:textSize="16sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="30dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/close_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/exist"
                    android:textColor="#333333"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/un_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/unregister"
                    android:textColor="#333333"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/license_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="授权给：xx x xx xx使用" />

                <TextView
                    android:id="@+id/license_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="授权到期日期是:xxx年xx月xx日" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.DrawerLayout>
</LinearLayout>